♻️ ::notification 코드 수정